--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,24 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <div class="navbar-wagon">
+      <h1>Simple Airbnb</h1>
+      <div class="form-flex">
+        <form action="/flats" method="get" class="form-inline">
+          <input type="text" name="query" placeholder="search" class="form-control">
+          <input type="submit" class= "btn btn-primary" >
+        </form>
+      </div>
+        <%= link_to "All flats", flats_path, class: "btn btn-primary" %>
+        <%= link_to "New", new_flat_path, class: "btn btn-primary" %>
+    </div>
     <%= yield %>
   </body>
 </html>
